--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/coches_curso
 spring.datasource.username=postgres
 spring.datasource.password=12345
+server.servlet.context-path=/api
+springdoc.swagger-ui.enable=true
+
