--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.jpa.database=postgresql
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/coches_curso
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=12345
 server.servlet.context-path=/api
 springdoc.swagger-ui.enable=true
+
+jwt.secret.key=LLAVE_SECRETA
 
